[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "multicontroller"
version = "0.1.0"
description = ""
authors = [ "Aria Taylor <ari@aricodes.net>",]

[tool.black]
line-length = 95
target-version = [ "py39",]

[tool.poetry.scripts]
multicontroller = 'multicontroller.cli:main'

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.0"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
watchgod = "^0.7"
black = "^21.12b0"
flake8 = "^4.0.1"
flake8-black = "^0.2.3"
